fix(typing-indicator): fixed indicator on safari

--- a/components/ui/User/State/State.less
+++ b/components/ui/User/State/State.less
@@ -1,5 +1,4 @@
 .user-state {
-  position: relative;
   display: flex;
   align-items: center;
 
@@ -36,7 +35,6 @@
     width: 6px;
     height: 6px;
     border-radius: @half;
-    position: relative;
     &:extend(.typing-state-animation);
   }
 }
